# investflow

./: .gitignore  .pre-commit-config.yaml  AZURE_DEPLOYMENT_PLAN.md  BACKEND_SETUP.md  BREADCRUMB_TRAIL.md  DATA_RECOVERY_SUMMARY.md  EXPENSE_DOCUMENT_IMPLEMENTATION.md  FRONTEND_CONTEXT.md  FRONTEND_SETUP.md  GITHUB_ACTIONS_AZURE_SETUP.md  LEASE_DASHBOARD_DESIGN.md  LEASE_GENERATION_ADLS.md  LEASE_PDF_MAPPING.md  LEASE_SYSTEM_SUMMARY.md  LEASE_UI_PROPOSAL.md  LEASING_WORKFLOW_IMPLEMENTATION.md  MIGRATION_QUICK_REFERENCE.md  NE_res_agreement.tex  PRODUCTION_AUTH_CONFIG.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  PRODUCTION_LAKEKEEPER_SETUP.md  PROPERTY_SHARING_FEATURE.md  QUICK_TEST.md  README.md  READY_TO_TEST.md  SCHEDULED_FINANCIALS_AUTO_ADD.md  SCHEDULED_FINANCIALS_TEMPLATE_STORAGE.md  TESTING_GUIDE.md  TESTING_STATUS.md  azure-resources.md  deploy.sh  fix_production_encryption_key.sh  iceberg-catalog-options.md  lakekeeper_docs.txt  lease_feature.md  make_app.txt  mo_late.txt  mo_laws.txt  test-local.sh
backend/: Dockerfile  LAKEKEEPER_SETUP.md  MIGRATION_FINANCIAL_PERFORMANCE_CACHE.md  MIGRATION_TO_ICEBERG.md  OAUTH2_QUICK_START.md  README.md  add_lakekeeper_user_columns.sql  add_unit_id_to_expenses.sql  add_user_interest_rates.sql  add_user_shares_table.sql  create_document_metadata_table.py  create_expenses_table.py  create_user_shares_table.py  docker-compose.yml  env.example  fix_user_schema.py  fix_user_schema_password.py  migrate_financial_performance.py  migrate_populate_financial_performance_cache.py  migrate_user_cache.py  pyproject.toml  run_migration.py  (+16 more)
(+209 files in other folders)
